# serializer version: 1
# name: test_hornlights_start[lights]
  '''
  Request to flash lights 3 times has been sent. It may take a few seconds to take effect.
  
  '''
# ---
# name: test_hornlights_start[horn]
  '''
  Request to horn 3 times sent. It may take a few seconds to take effect.
  
  '''
# ---